--- a/app/src/main/res/layout/activity_acolhida.xml
+++ b/app/src/main/res/layout/activity_acolhida.xml
@@ -3,86 +3,99 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.AcolhidaActivity">
+
+    <TextView
+        android:id="@+id/label_contato_emergencia"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
+        android:fontFamily="@font/poppinssemibold"
+        android:gravity="center"
+        android:text="@string/casas_de_acolhida"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cadastro_casa"
+        android:layout_width="150dp"
+        android:layout_height="20dp"
+        android:background="@drawable/round_corner_btn_dark"
+        android:backgroundTint="@color/primary_4"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/sugerir_nova_casa"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_explic" />
+
+    <Button
+        android:id="@+id/aprovar_btn"
+        android:layout_width="100dp"
+        android:layout_height="20dp"
+        android:background="@drawable/round_corner_btn_dark"
+        android:backgroundTint="@color/primary_4"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="Admin"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_casa" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="86dp"
         android:layout_height="82dp"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="163dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/logo_acolhidas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/label_contato_emergencia" />
+
+    <TextView
+        android:id="@+id/label_explic"
+        android:layout_width="281dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppinsregular"
+        android:text="@string/clique_nos_cards_abaixo_para_mais_detalhes_sobre_as_casas_de_acolhida"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
-        android:fillViewport="true"
+        android:layout_marginTop="280dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraint_card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_acolhida"
-                android:layout_width="350dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="30dp"
-                app:cardCornerRadius="20dp"
-                app:cardElevation="5dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_acolhida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/acolhida_vh"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <LinearLayout
-                    android:id="@+id/ll_card_acolhida"
-                    android:layout_width="350dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="21dp"
-                    android:paddingTop="15dp"
-                    android:paddingEnd="21dp">
-
-                    <TextView
-                        android:id="@+id/nome_casa"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="15dp"
-                        android:text="@string/nome_da_casa"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/bairro"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="15dp"
-                        android:text="@string/bairro" />
-
-                    <TextView
-                        android:id="@+id/publico_alvo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="15dp"
-                        android:text="@string/p_blico_alvo" />
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
