--- a/app/src/main/res/layout/activity_usuario_cadastro.xml
+++ b/app/src/main/res/layout/activity_usuario_cadastro.xml
@@ -63,7 +63,7 @@
 
             <TextView
                 android:id="@+id/email_label_cadastro"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textStyle="italic"
@@ -87,14 +87,15 @@
 
             <TextView
                 android:id="@+id/senha_cadstro_label"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/informe_uma_senha"
                 android:textColor="@color/black"
+                android:layout_marginStart="80dp"
                 android:textSize="16sp"
                 android:textStyle="italic"
-                app:layout_constraintStart_toStartOf="@+id/email_cadastro"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/email_cadastro" />
 
             <EditText
