--- a/app/src/main/res/layout/activity_psicologos.xml
+++ b/app/src/main/res/layout/activity_psicologos.xml
@@ -56,6 +56,7 @@
         <LinearLayout
             android:id="@+id/ll_psico"
             android:gravity="center"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
