--- a/app/src/main/res/layout/activity_leis.xml
+++ b/app/src/main/res/layout/activity_leis.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -35,18 +34,17 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_leis"
         android:layout_width="350dp"
-        android:clickable="true"
-        android:focusable="true"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="30dp"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="20dp"
         app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo_leis">
-
 
         <LinearLayout
             android:id="@+id/ll_card_leis"
@@ -63,35 +61,35 @@
                 android:id="@+id/leis_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:textColor="@color/black"
                 android:fontFamily="@font/poppinsbold"
+                android:paddingBottom="10dp"
                 android:text="@string/jusbrasil"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
-
 
             <TextView
                 android:id="@+id/publico_alvo_detalhe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:textSize="12sp"
                 android:fontFamily="@font/poppinsregular"
+                android:paddingBottom="10dp"
                 android:text="@string/text_jus"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/link_jus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="15dp"
-                android:textSize="12sp"
                 android:fontFamily="@font/poppinsregular"
+                android:paddingBottom="15dp"
                 android:text="@string/link_jus"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
 
-
         </LinearLayout>
+
+
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
