--- a/app/src/main/res/layout/activity_leis.xml
+++ b/app/src/main/res/layout/activity_leis.xml
@@ -2,94 +2,226 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.AcolhidaActivity">
+    tools:context=".presentation.LeisActivity">
 
-    <TextView
-        android:id="@+id/label_contato_emergencia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:fontFamily="@font/poppinssemibold"
-        android:gravity="center"
-        android:text="@string/leis_e_direitos"
-        android:textSize="20sp"
+    <ImageView
+        android:id="@+id/logo_psico"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/logo_leis"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/logo_leis"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="163dp"
-        android:src="@drawable/logo_leis"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_contato_emergencia" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_leis"
+    <TextView
+        android:id="@+id/psico_txt"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="30dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="5dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/poppinssemibold"
+        android:gravity="center"
+        android:justificationMode="inter_word"
+        android:lineSpacingExtra="8dp"
+        android:text="@string/title_leis"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_leis">
+        app:layout_constraintTop_toBottomOf="@+id/logo_psico" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_mulher"
+        android:layout_width="116dp"
+        android:layout_height="113dp"
+        android:layout_marginTop="30dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/card_edge"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/card_lgbt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/psico_txt">
 
         <LinearLayout
-            android:id="@+id/ll_card_leis"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingStart="21dp"
-            android:paddingTop="15dp"
-            android:paddingEnd="21dp"
-            app:layout_constraintTop_toBottomOf="@+id/logo_acolhida"
-            tools:layout_editor_absoluteX="31dp">
+            android:id="@+id/ll_card"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="55dp"
+                android:layout_height="62dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/mulher" />
 
             <TextView
-                android:id="@+id/leis_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsbold"
-                android:paddingBottom="10dp"
-                android:text="@string/jusbrasil"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/poppinsregular"
+                android:gravity="center"
+                android:text="Mulheres"
                 android:textColor="@color/black"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/publico_alvo_detalhe"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsregular"
-                android:paddingBottom="10dp"
-                android:text="@string/text_jus"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/link_jus"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsregular"
-                android:paddingBottom="15dp"
-                android:text="@string/link_jus"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
-
+                android:textSize="14sp" />
         </LinearLayout>
-
-
     </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_lgbt"
+        android:layout_width="116dp"
+        android:layout_height="113dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/card_edge"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/card_pretas"
+        app:layout_constraintStart_toEndOf="@+id/card_mulher"
+        app:layout_constraintTop_toTopOf="@+id/card_mulher">
+
+        <LinearLayout
+            android:id="@+id/ll_card_home4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="55dp"
+                android:layout_height="62dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/lgbt" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/poppinsregular"
+                android:gravity="center"
+                android:text="LGBTQIA+"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_pretas"
+        android:layout_width="116dp"
+        android:layout_height="113dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/card_edge"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/card_lgbt"
+        app:layout_constraintTop_toTopOf="@+id/card_lgbt">
+
+        <LinearLayout
+            android:id="@+id/ll_card_preta"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="55dp"
+                android:layout_height="62dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/black" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppinsregular"
+                android:gravity="center"
+                android:text="Pessoas \nPretas"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_crimes_sex"
+        android:layout_width="116dp"
+        android:layout_height="113dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="36dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/card_edge"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/card_direitos_apoio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_mulher">
+
+        <LinearLayout
+            android:id="@+id/ll_card_crim_sex"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="55dp"
+                android:layout_height="62dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/sexcrime" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppinsregular"
+                android:gravity="center"
+                android:text="Crimes \nSexuais"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_direitos_apoio"
+        android:layout_width="116dp"
+        android:layout_height="113dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="40dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="@drawable/card_edge"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/card_crimes_sex"
+        app:layout_constraintTop_toBottomOf="@+id/card_lgbt">
+
+        <LinearLayout
+            android:id="@+id/ll_card_direitos_apoio"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="55dp"
+                android:layout_height="62dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/apoio" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppinsregular"
+                android:gravity="center"
+                android:text="Direitos e \nApoio"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
