--- a/app/src/main/res/layout/activity_contato_emergencia_maps.xml
+++ b/app/src/main/res/layout/activity_contato_emergencia_maps.xml
@@ -1,9 +1,8 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".presentation.ContatoEmergenciaMapsActivity">
 
     <androidx.cardview.widget.CardView
@@ -35,7 +34,7 @@
                 android:layout_height="250dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <androidx.cardview.widget.CardView
@@ -45,35 +44,35 @@
                 android:layout_marginTop="20dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:foreground="@drawable/card_edge_black"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="5dp"
-                android:foreground="@drawable/card_edge_black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/map">
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <ImageView
-                        android:src="@drawable/sms_zap_logo"
                         android:layout_width="65dp"
+                        android:layout_height="match_parent"
                         android:layout_marginStart="5dp"
-                        android:layout_height="match_parent"/>
+                        android:src="@drawable/sms_zap_logo" />
 
                     <TextView
                         android:id="@+id/text_whatsapp"
-                        android:text="@string/msg_whats_btn"
-                        android:textAlignment="gravity"
-                        android:textSize="13sp"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/poppinsregular"
                         android:lineSpacingExtra="5dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"/>
+                        android:text="@string/msg_whats_btn"
+                        android:textAlignment="gravity"
+                        android:textSize="13sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -84,47 +83,41 @@
                 android:layout_marginTop="20dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:foreground="@drawable/card_edge_black"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="5dp"
-                android:foreground="@drawable/card_edge_black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/send_whats">
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <ImageView
-                        android:src="@drawable/call_logo"
                         android:layout_width="60dp"
+                        android:layout_height="match_parent"
                         android:layout_marginStart="8dp"
-                        android:layout_height="match_parent"/>
+                        android:src="@drawable/call_logo" />
 
                     <TextView
                         android:id="@+id/text_call"
-                        android:text="@string/msg_call_btn"
-                        android:textAlignment="gravity"
-                        android:textSize="13sp"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/poppinsregular"
                         android:lineSpacingExtra="5dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"/>
+                        android:text="@string/msg_call_btn"
+                        android:textAlignment="gravity"
+                        android:textSize="13sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
 
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
